# assess-ocds-data

./: package-lock.json  pyproject.toml
assess-ocds-frontend/: package-lock.json  package.json
assess-ocds-frontend/src/: App.css  App.js  Heapmap.js  month_counts.json
